# mint

./: INSTALL.bat  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_03_23_0206-93625f78a60d_init.py  2024_03_23_2139-92908fadc115_init.py  2024_03_25_0059-89abc7e771d9_init.py  2024_03_26_1749-cbc5c06eece3_init.py
common/: __init__.py  config.py  csv.py  excell.py  playwright.py  process_utils.py  project.py
common/captcha/: enum.py  recaptcha.py  serializer.py
common/discord/: __init__.py  account.py  enums.py
common/google/: __init__.py  account.py  browser.py  enums.py  errors.py
common/recaptcha/: enum.py  serializer.py
config/.default/: chains.toml  config.toml
mint/: __init__.py  account.py  chains.py  client.py  config.py  contracts.py  discord.py  errors.py  excell.py  paths.py  twitter.py  twitter_.py
mint/abi/: eth_to_mintchain_bridge.json  mintchain_to_eth.json
mint/api/: errors.py  http.py  models.py
mint/database/: __init__.py  crud.py  mixins.py  models.py
mint/onchain/: chains.py  contracts.py  scripts.py
mint/scripts/: __init__.py  discord.py  errors.py  mint.py  twitter.py
