[tool.poetry]
name = "mint"
version = "0.1.0"
description = "Mint blockchain script"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
better-web3 = "^3.2.1"
tweepy-self = "^1.9.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
