[tool.poetry]
name = "mint"
version = "1.0.0.b1"
description = "Mint blockchain script"
authors = ["Alen <alen.kimov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py-self = {git="https://github.com/alenkimov/discord.py-self", rev="tls"}
better-web3 = {git="https://github.com/alenkimov/better_web3"}
tweepy-self = {version="^1.10.0b3", allow-prereleases=true}
loguru = "^0.7"
questionary = "^2"
tqdm = "^4.66"
openpyxl = "^3.1.2"
sqlalchemy = "^2"
aiosqlite = "^0.20"
alembic = "^1.13"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
